# PythonIdeasFromGitHub

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: github_client.py  main.py  schemas.py  services.py  storage.py
app/core/: config.py  logging.py
data/: FastAPI_2026-07-06_14-49-47.csv  FastAPI_2026-07-06_14-49-47.json  django_2026-05-22_17-45-55.csv  django_2026-05-22_17-45-55.json  django_2026-07-06_16-45-48.csv  django_2026-07-06_16-45-48.json  django_2026-07-06_17-29-02.csv  django_2026-07-06_17-29-10.json  django_2026-07-06_18-56-46.csv  django_2026-07-06_18-56-46.json  django_2026-07-06_19-43-13.csv  django_2026-07-06_19-43-13.json  django_2026-07-06_20-40-55.csv  django_2026-07-06_20-40-55.json  fastapi_2026-05-23_00-24-12.csv  fastapi_2026-05-23_00-24-12.json  fastapi_2026-07-06_15-26-41.csv  fastapi_2026-07-06_15-26-41.json  fastapi_2026-07-06_16-08-29.csv  fastapi_2026-07-06_16-08-29.json  fastapi_2026-07-06_16-54-55.csv  fastapi_2026-07-06_16-54-55.json  fastapi_2026-07-06_17-24-29.csv  fastapi_2026-07-06_17-24-29.json  fastapi_2026-07-06_17-42-19.csv  fastapi_2026-07-06_17-42-19.json  fastapi_2026-07-06_19-22-14.csv  fastapi_2026-07-06_19-22-14.json  fastapi_2026-07-06_19-23-05.csv  fastapi_2026-07-06_19-23-05.json  fastapi_2026-07-06_19-53-29.csv  fastapi_2026-07-06_19-53-29.json  gjango_2026-07-06_18-55-54.csv  gjango_2026-07-06_18-55-54.json  gjango_languagepython_2026-07-06_17-43-09.json
google_sheets/: Code.gs  README.md
